# android-curl

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  key.keystore  proguard-rules.pro
app/libs/: curl_native-release.aar
app/src/androidTest/java/com/github/yutianzuo/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/yutianzuo/myapplication/: BeanTest.java  BizNetWrapper.java  Crypto.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/yutianzuo/myapplication/: ExampleUnitTest.java
curl_native/: CMakeLists.txt  build.gradle  proguard-rules.pro
curl_native/src/androidTest/java/com/github/yutianzuo/curl_native/: ExampleInstrumentedTest.java
curl_native/src/main/: AndroidManifest.xml
curl_native/src/main/cpp/: aes_cbc.h  android_utils.h  jni.cpp  miscs.h  sha.h  string_x.h
curl_native/src/main/cpp/lib/: libcurl.la
curl_native/src/main/cpp/lib/pkgconfig/: libcurl.pc
curl_native/src/main/cpp/lib/x86/: libcurl.la
curl_native/src/main/cpp/lib/x86/pkgconfig/: libcurl.pc
curl_native/src/main/cpp/manager/: httpmanager.h  requestmanager.cpp  requestmanager.h  threadpool.h
curl_native/src/main/cpp/request/: downloadrequest.h  getrequest.h  postfilerequest.h  postrequest.h  putrequest.h  request.h
curl_native/src/main/cpp/tools/: timeutils.h
curl_native/src/main/java/com/github/yutianzuo/curl_native/: HttpCallback.java  HttpManager.java  JniCurl.java  RequestManager.java
curl_native/src/main/java/com/github/yutianzuo/curl_native/utils/: Misc.java  PriorityThreadFactory.java  ThreadHelper.java  ThreadUtils.java
curl_native/src/main/res/values/: strings.xml
curl_native/src/test/java/com/github/yutianzuo/curl_native/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native_crash_handler/: CMakeLists.txt  build.gradle  consumer-rules.pro
native_crash_handler/src/main/: AndroidManifest.xml
native_crash_handler/src/main/cpp/: android_utils.h  native_crash_handler.cpp
native_crash_handler/src/main/java/com/github/yutianzuo/native_crash_handler/: NativeCrashHandler.java
